--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
         google()
         mavenCentral()
     }
+    dependencies {
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2")
+    }
 }
 
 plugins {
